Commit No. 76 - Supplementary information lisitng, change in include logic - incomplete

--- a/php/supplements/20140908001/index.html
+++ b/php/supplements/20140908001/index.html
@@ -1,11 +1,13 @@
-<div class="chapter hashnav" id="BS_C01" type="adhyaya">
-    <div class="section hashnav" id="BS_C01_S01" type="paada">
+<div class="chapter hashnav">
+    <div class="section hashnav">
+        <div class="backTo"><a href="#"><i class="fa fa-reply"></i> back to source</a></div>
         <div class="ch_name">आकाशाधिकरणम्</div>
-        <div class="sname">विद्वान्  मणिद्राविडः, चेन्नै</div>
         <hr>
+        <div class="sname">विद्वान्  मणिद्राविडः, चेन्नै</div>
         <div class="bhashya">आकाशस्तल्लिङ्गात् 1। छान्दोग्ये “त्रयो होद्गीथे कुशला बभूवुः शिलकः शालावत्यः, चैकितायनो दाल्भ्यः, प्रवाहणो जैवलिः”2 इति त्रयाणां संवादं प्रकृत्य प्रश्नोत्तरवाक्यसन्दर्भे आम्नायते – “अस्य लोकस्य का गतिरिति, आकाश इति होवाच, सर्वाणि ह वा इमानि भूतान्याकाशादेव समुत्पद्यन्ते, आकाशं प्रत्यस्तं यन्ति, आकाशो ह्येवैभ्यो ज्यायान्  , आकाशः परायणम्  , स एष परोवरीया-नुद्गीथः, स एषोऽनन्तः, परोवरीयो हास्य भवति, परोवरीयसो ह लोकान् जयति य एतदेवं विद्वान्परोवरीयां-समुद्गीथमुपास्ते” इति ।</div>
         <div class="bhashya">अत्र उद्गीथावयवे ओङ्कारे सम्पाद्योपास्यः आकाशः भूताकाशो वा ब्रह्म वेति संशयः। वेदे आकाशशब्दस्य उभयत्र प्रयोगदर्शनात् । </div>
         <div class="bhashya">पूर्वाधिकरणे फलरूपतात्पर्यलिङ्गोपेततया प्रबलेन सर्वपाप्मोदितत्वरूपब्रह्मलिङ्गेन रूपवत्त्वाद्यब्रह्मलिङ्गबाधेऽपि इह आकाशशब्दस्य भूताकाशे शक्तस्य श्रुतित्वात् सर्वभूतोत्पत्तिकारणत्वादि-ब्रह्मलिङ्गेन तद्बाधासम्भवात् पूर्वन्यायाभावेन पूर्वपक्षोत्थानात् प्रत्युदाहरणं सङ्गतिः । </div>
+        <iframe class="video" width="420" height="315" src="http://www.youtube.com/embed/2GCIrnM0fP0"></iframe>
         <div class="bhashya">पूर्वपक्षस्तु - इदमाकाशपदं भूताकाशपरमेव, तत्र तस्य मुख्यत्वात् । क्वाचित्को ब्रह्मणि प्रयोगश्च व्यापकत्वासङ्गत्वादिगुणयोगाद् गौणः, अन्यथाऽनेकार्थत्वप्रसङ्गात् । कोशादेर्विनिगमकस्य च भूताकाश एव सत्त्वात् । काशृ दीप्तौ इति धातोः आङ्‌पूर्वान्निष्पन्नः आकाशशब्दः आ समन्तात् काशते इति व्युत्पत्त्या अपरिच्छिन्नप्रकाशे ब्रह्मणि यौगिको वा । तत्रापि रूढिर्योगमपहरति इति न्यायेन रूढार्थग्रहणसम्भवे यौगिकार्थग्रहणमयुक्तम् । न चात्र मुख्यार्थग्रहणे बाधकं किञ्चिदस्ति, वाक्यशेषस्य भूताकाशेऽपि योजयितुं शक्यत्वादिति ।</div>
         <div class="bhashya">नन्वत्र सर्वभूतोत्पत्तिकारणत्वं, तल्लयाधारत्वं, परायणपदोक्तं तत्स्थितिकारणत्वं, ज्यायस्त्वम् , अनन्तत्वमिति ब्रह्मलिङ्गानां बहुत्वात् भूयोनुग्रहन्यायेन एकस्याः आकाशश्रुतेरेव मुख्यार्थबाधो युक्त इति चेन्न । बहुभिरपि अप्रधानैः प्रधानस्य विरोधे भूयोनुग्रहन्यायस्याप्रवृत्तेः । “द्रव्यसंस्कारविरोधे द्रव्यं तदर्थत्वात्”3 इति पूर्वमीमांसाधिकरणे तथा निर्णीतत्वात् । आकाशशब्दस्य चात्रोपास्यसमर्पकतया प्राधान्यात् । </div>
         <div class="bhashya">आकाशशब्दस्य वाक्योपक्रमे श्रूयमाणत्वात् उपक्रमन्यायोऽपि भूताकाशस्यानुगुणः । अतश्च “सर्वाणि ह वा इमानि भूतान्याकाशादेव समुत्पद्यन्ते” इत्यत्र आकाशभिन्नसर्वभूतपरतया सर्वपदसङ्कोचं स्वीकृत्य लिङ्गानि भूताकाश एव नेयानीति ।</div>
