Commit No. 114 - vyakhya data inserted - stylng pending

--- a/php/design.html
+++ b/php/design.html
@@ -91,7 +91,7 @@
                 <div class="sname">॥ प्रथमः पादः ॥</div>
                 <hr />
                 <div class="intro_bhashya" id="BS_C01_S01_I01">युष्मदस्मत्प्रत्ययगोचरयोर्विषयविषयिणोस्तमःप्रकाशवद्विरुद्धस्वभावयोरितरेतरभावानुपपत्तौ 
-                <sup id="wordId" class="vTrigger info blue" tabindex="0" role="button" rel="popover" data-trigger="focus" title="व्याख्याः" data-loaded="0" data-dest="ellige">
+                <sup id="wordId" class="vTrigger info blue" tabindex="0" role="button" rel="popover" title="व्याख्याः" data-loaded="0" data-dest="ellige">
                     <i class="fa fa-share"></i>
                 </sup> 
                 सिद्धायाम्, तद्धर्माणामपि सुतरामितरेतरभावानुपपत्तिः — इत्यतः अस्मत्प्रत्ययगोचरे विषयिणि चिदात्मके युष्मत्प्रत्ययगोचरस्य विषयस्य तद्धर्माणां चाध्यासः तद्विपर्ययेण विषयिणस्तद्धर्माणां च विषयेऽध्यासो मिथ्येति भवितुं युक्तम् । तथाप्यन्योन्यस्मिन्नन्योन्यात्मकतामन्योन्यधर्मांश्चाध्यस्येतरेतराविवेकेन अत्यन्तविविक्तयोर्धर्मधर्मिणोः मिथ्याज्ञाननिमित्तः सत्यानृते मिथुनीकृत्य ‘अहमिदम्’ ‘ममेदम्’ इति नैसर्गिकोऽयं लोकव्यवहारः ॥</div>
