--- a/php/wordId.html
+++ b/php/wordId.html
@@ -1,6 +1,6 @@
     <ul>
-        <li><a onclick="showVyakhya('vyakhyaID1')">भामति</a></li>
-        <li><a onclick="showVyakhya('vyakhyaID2')">न्यायनिर्णय</a></li>
-        <li><a onclick="showVyakhya('vyakhyaID3')">पञ्चपादिक</a></li>
-        <li><a onclick="showVyakhya('vyakhyaID4')">रत्नप्रभ</a></li>
+        <li><a class="showvyakhya" id="vyakhyaID1" data-parent="wordId">भामति</a></li>
+        <li><a class="showvyakhya" id="vyakhyaID2" data-parent="wordId">न्यायनिर्णय</a></li>
+        <li><a class="showvyakhya" id="vyakhyaID3" data-parent="wordId">पञ्चपादिक</a></li>
+        <li><a class="showvyakhya" id="vyakhyaID4" data-parent="wordId">रत्नप्रभ</a></li>
     </ul>
