--- a/php/design.html
+++ b/php/design.html
@@ -91,12 +91,12 @@
                 <div class="sname">॥ प्रथमः पादः ॥</div>
                 <hr />
                 <div class="intro_bhashya" id="BS_C01_S01_I01">युष्मदस्मत्प्रत्ययगोचरयोर्विषयविषयिणोस्तमःप्रकाशवद्विरुद्धस्वभावयोरितरेतरभावानुपपत्तौ 
-                <sup id="wordId" class="vTrigger info blue" tabindex="0" role="button" rel="popover" title="व्याख्याः" data-loaded="0">
+                <sup id="wordId" class="vTrigger info blue" tabindex="0" role="button" rel="popover" title="व्याख्याः" data-loaded="0" data-trigger="focus">
                     <i class="fa fa-share"></i>
                 </sup> 
                 सिद्धायाम्, तद्धर्माणामपि सुतरामितरेतरभावानुपपत्तिः — इत्यतः अस्मत्प्रत्ययगोचरे विषयिणि चिदात्मके युष्मत्प्रत्ययगोचरस्य विषयस्य तद्धर्माणां चाध्यासः तद्विपर्ययेण विषयिणस्तद्धर्माणां च विषयेऽध्यासो मिथ्येति भवितुं युक्तम् । तथाप्यन्योन्यस्मिन्नन्योन्यात्मकतामन्योन्यधर्मांश्चाध्यस्येतरेतराविवेकेन अत्यन्तविविक्तयोर्धर्मधर्मिणोः मिथ्याज्ञाननिमित्तः सत्यानृते मिथुनीकृत्य ‘अहमिदम्’ ‘ममेदम्’ इति नैसर्गिकोऽयं लोकव्यवहारः ॥</div>
                 <div class="intro_bhashya" id="BS_C01_S01_I02">आह — कोऽयमध्यासो नामेति । उच्यते — स्मृतिरूपः परत्र पूर्वदृष्टावभासः । तं केचित् अन्यत्रान्यधर्माध्यास इति वदन्ति । केचित्तु यत्र यदध्यासः तद्विवेकाग्रहनिबन्धनो 
-                <sup id="wordId1" class="vTrigger info blue" tabindex="0" role="button" rel="popover" title="व्याख्याः" data-loaded="0">
+                <sup id="wordId1" class="vTrigger info blue" tabindex="0" role="button" rel="popover" title="व्याख्याः" data-loaded="0" data-trigger="focus">
                     <i class="fa fa-share"></i>
                 </sup> 
                  भ्रम इति । अन्ये तु यत्र यदध्यासः तस्यैव विपरीतधर्मत्वकल्पनामाचक्षते । सर्वथापि तु अन्यस्यान्यधर्मावभासतां न व्यभिचरति । तथा च लोकेऽनुभवः — शुक्तिका हि रजतवदवभासते, एकश्चन्द्रः सद्वितीयवदिति ॥</div>
