Commit No. 131 - demo files renamed

--- a/php/vyakhyaDemo.html
+++ b/php/vyakhyaDemo.html
@@ -18,7 +18,7 @@
 	<link rel="stylesheet" type="text/css" href="style/jquery.mCustomScrollbar.css" media="screen">
     <link href="style/font-awesome-4.1.0/css/font-awesome.min.css" media="all" rel="stylesheet" type="text/css" />
 
-	<script type="text/javascript" src="js/common.js" charset="UTF-8"></script>
+	<script type="text/javascript" src="js/common_design.js" charset="UTF-8"></script>
 	<script type="text/javascript" src="js/devanagari_kbd.js" charset="UTF-8"></script>
 	<title>Shankara Bhashya</title>
 	
